--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             UK</p>
         </div>
 
-        <p>Re: Eileen Dover university application</p>
+        <p><b>Re: Eileen Dover university application</b></p>
 
         <p>Dear Eileen,</p>
 
