--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="address">
-            <p>Dr. Eleanor Gaye<br>
+            <p><b>Dr. Eleanor Gaye</b><br>
             Awesome Science Faculty<br>
             University of Awesome<br>
             Bobtown, CA 99999, USA<br>
@@ -17,10 +17,10 @@
             Email: no_reply@example.com<br>
             20 January 2016</p>
             
-            <p>Miss Eileen Dover<br>
+            <p><i><strong>Miss Eileen Dover</strong><br>
             4321 Cliff Top Edge<br>
             Dover, CT9 XXX<br>
-            UK</p>
+            UK</i></p>
         </div>
 
         <p><b>Re: Eileen Dover university application</b></p>
@@ -73,7 +73,7 @@
         <p>Yours sincerely,<br>
         Dr Eleanor Gaye</p>
 
-        <p><strong>University of Awesome motto:</strong> "Be awesome to each other." The memoirs of Bill S Preston, Esq</p>
+        <p>University of Awesome motto: "Be awesome to each other." <i>The memoirs of Bill S Preston, Esq</i></p>
     </div>
 </body>
 </html>
