--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="address">
-            <p><b>Dr. Eleanor Gaye</b><br>
+            <p><b><i>Dr. Eleanor Gaye</b><br>
             Awesome Science Faculty<br>
             University of Awesome<br>
             Bobtown, CA 99999, USA<br>
-            Tel: 123-456-7890<br>
-            Email: no_reply@example.com<br>
+            <strong>Tel</strong>: 123-456-7890<br>
+            <strong>Email</strong>: no_reply@example.com</i><br>
             20 January 2016</p>
             
             <p><i><strong>Miss Eileen Dover</strong><br>
