--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <p><b><i>Dr. Eleanor Gaye</b><br>
             Awesome Science Faculty<br>
             University of Awesome<br>
-            Bobtown, CA 99999, USA<br>
+            Bobtown, CA 99999, USA</i><br>
             <strong>Tel</strong>: 123-456-7890<br>
-            <strong>Email</strong>: no_reply@example.com</i><br>
+            <strong>Email</strong>: <i>no_reply@example.com</i><br>
             20 January 2016</p>
             
             <p><i><strong>Miss Eileen Dover</strong><br>
